# ProjetoEtiquetasCpp

./: CMakeLists.txt  Oque falta fazer  README.md  alteracaoPipeLine.txt  compilar.sh  compiler.sh  imgui.ini  installer.sh  main.cpp  maintestes.cpp  prog  readme.TXT  run.sh
controller/: controller.cpp  controller.h  detector.cpp  detector.h
data/: arquiver.txt  config.txt
model/: OCR.cpp  arquiver.cpp  capture.cpp  capture.h  library.h  ocr.h  preprocessor.cpp  preprocessor.h  validator.cpp
model/heaters/: GPIO.h  OCR.h  arquiver.h  capture.h  hardwarePWM.h  impress.h  preprocessor.h  raspcam.h  rewinder.h  strobo.h  thread.h  threadUtils.h  threadUtils.hpp  validator.h
model/implement/: GPIO.cpp  OCR.cpp  arquiver.cpp  capture.cpp  hardwarePWM.cpp  impress.cpp  preprocessor.cpp  raspcam.cpp  rewinder.cpp  thread.cpp  threadUtils.cpp  validator.cpp
tests/: CMakeLists.txt  CameraFuncional.cpp  SensorCamera.cpp  TestLDR.cpp  comando.txt  etiqueta_debug.txt  imguiexemple.cpp  imprimir.py  inter  test1.cpp  test2.cpp  testcamera.cpp
tests/motor_rebobinador/: motor_rebobinador.ino
view/: imguiexemple.cpp  interface.cpp  interface.h
